# gloria

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  create_binomial_test_data.py  main.py  pyproject.toml  setup.py  simulate_data.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: build_wheels.yml  docs_to_pages.yml
cassandra/: __init__.py  configuration.py  constants.py  interface.py  models.py  regressors.py  utilities.py
cassandra/stan_models/: binomial_constant_n.stan  edd_glm_N_vectorized_negbinom.stan  edd_p_constant.stan  negative_binomial.stan
data/real/: browserversiondf.csv
data/simulated/: 2024-11-22_binomial_test_n00.json  2024-11-22_binomial_test_n01.csv  2024-11-22_binomial_test_n02.json  2025-02-19_binomial_test_n00.csv  2025-02-19_binomial_test_n01.json  2025-02-19_binomial_test_n02.csv  2025-02-19_binomial_test_n02.json  2025-02-19_binomial_test_n02_overdispersed.csv  gamma_test_data.csv
doc/source/: conf.py  index.rst  installation.rst  overview.rst
doc/source/_templates/autosummary/: class.rst  small_class.rst
doc/source/api/: diagnostics.rst  events.rst  index.rst  misc.rst  profiles.rst  protocols.rst  serialize.rst
doc/source/api/api/: gloria.BoxCar.rst  gloria.CalendricData.rst  gloria.Gaussian.rst  gloria.Gloria.add_external_regressor.rst  gloria.Gloria.add_protocol.rst  gloria.Gloria.add_seasonality.rst  gloria.Gloria.from_toml.rst  gloria.Gloria.is_fitted.rst  gloria.Gloria.load_data.rst  gloria.Gloria.rst  (+10 more)
doc/source/get_started/: basic_usage.rst  calendric_data.rst  decomposition_types.rst  events.rst  external_regressors.rst  index.rst  installation.rst  model_selection.rst  modeling_trends.rst  saturation.rst  seasonalities.rst
doc/source/release_notes/: index.rst  v0_1_2.rst
gloria/: __init__.py  api.py  configuration.py  constants.py  events.py  foster.txt  interface.py  models.py  plot.py  profiles.py  regressors.py  serialize.py  types.py  utilities.py
gloria/protocols/: calendric.py  protocol_base.py
gloria/stan_models/: beta.stan  beta_binomial_constant_n.stan  binomial_constant_n.stan  binomial_vectorized_n.stan  edd_glm_N_constant_negbinom.stan  edd_glm_N_vectorized.stan  gamma.stan  negative_binomial.stan  negative_binomial_exp.stan  negative_binomial_legacy.stan  negative_binomial_norm.stan  normal.stan  poisson.stan
gloria/tests/: test_interface.py
gloria/utilities/: config.toml  configuration.py  constants.py  diagnostics.py  errors.py  logging.py  misc.py  serialize.py  types.py
models/: test_model.json  test_model_browser.json
run_configs/: run_config.json  run_config_binomial_vectorized.json  run_config_browser_data.json  run_config_gamma.json  test.json  test.toml
scripts/: 01_demo_toml_config.py  02_demo_multiplicative_models.py  03_demo_version switch.py  04_demo_anomalies.py  add_christmas_to_data.py  exmpl_beta.py  exmpl_betatest.py  exmpl_binomial_vectorized.py  exmpl_browser.py  exmpl_gamma.py  exmpl_holidays.py  exmpl_holidays_event_out_of_range.py  plot_tests.py  simulate_data.py  simulate_data_beta.py
scripts/data/real/: google_apple_stock_5yrs.csv  pypi_downloads_pandas_prophet.csv  pypi_downloads_pydantic_versioning.csv  seat_occupancy.csv  wheater_data_AC_B.csv
scripts/data/simulated/: 2025-02-19_binomial_test_n00.json  2025-02-19_binomial_test_n01.csv  2025-05-19_beta_test_n00.csv  2025-05-19_beta_test_n00.json  2025-05-19_beta_test_n01.csv  2025-05-19_beta_test_n01.json  2025-05-19_beta_test_n02.csv  2025-05-19_beta_test_n02.json  binomial_test_data.csv  gamma_test_data.csv
scripts/run_configs/: fit_config.toml  run_config.json  run_config.toml  run_config_beta.json  run_config_betabinomial.json  run_config_binomial_vectorized.json  run_config_browser_data.json  run_config_gamma.json  run_config_template.toml
simulated_data/: 2024-11-21_poisson_test_n00.csv  2024-11-21_poisson_test_n00.json  2024-11-21_poisson_test_n01.csv  2024-11-21_poisson_test_n01.json  2024-11-22_binomial_test_n00.csv  2024-11-22_binomial_test_n01.json  2024-11-22_binomial_test_n02.csv
