[tool.poetry]
name = "gloria"
version = "0.1.0"
description = "Gloria is a time series analysis and forecasting tool, loosely based on Facebooks Prophet(https://facebook.github.io/prophet/)."
authors = ["Benjamin Kambs <b.kambs@e-dynamics.de>",
           "Patrik Wollgarten <p.wollgarten@e-dynamics.de>",
           "Sami Chabani <s.chabani@e-dynamics.de>",
           "Amir Hassannejad <a.hassanejad@e-dynamics.de>",
           "Kawa Mohammad <k.mohammad@e-dynamics.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.5"
pandas = "^2.2.3"
pydantic = "^2.9.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
prophet = "^1.1.6"
cmdstanpy = "^1.2.4"


[tool.poetry.group.spyder.dependencies]
pyqt5-qt5 = "<=5.15.2"
pyqtwebengine-qt5 = "<=5.15.2"
pyqt5 = "^5.15.10"
spyder = "^5.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"